# caissa

./: README.md  bts.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts
apps/web/: components.json  next.config.ts  package.json  tsconfig.json
apps/web/src/: index.css
apps/web/src/app/: layout.tsx
apps/web/src/components/: mode-toggle.tsx  providers.tsx  sign-in-form.tsx  sign-up-form.tsx  user-menu.tsx
apps/web/src/lib/: auth-client.ts
apps/web/src/utils/: trpc.ts
services/analysis/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/analysis/app/: __init__.py  config.py  db.py  main.py  worker.py
services/analysis/app/adapters/: eval_cache.py  stockfish.py
services/analysis/app/core/: analysis.py  ports.py
